<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.OptionsFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/emergency_calls"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>


        <CheckBox
            android:id="@+id/enable_calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/set_to_allow_calls"/>

        <RelativeLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone">



            <TextView
                android:id="@+id/contact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:layout_marginStart="16dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/contact_title"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/save_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/save"
                android:padding="8dp"
                android:textAllCaps="false"
                android:layout_below="@id/phone"/>


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/alarm_type"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <RadioGroup
            android:id="@+id/alarm_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/speech"
                android:text="@string/text_to_speech"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/alarm"
                android:text="@string/alarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"/>

        </RadioGroup>

        <RelativeLayout
            android:id="@+id/tts_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/message_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_to_say"
                android:layout_marginStart="16dp"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_title"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/save_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/save"
                android:padding="8dp"
                android:textAllCaps="false"
                android:layout_below="@id/message"/>



        </RelativeLayout>




    </LinearLayout>

</androidx.core.widget.NestedScrollView>
