<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:text="@string/add_new_note"
        android:alpha="0.5"
        android:textStyle="bold"/>



    <FrameLayout
        android:id="@+id/note_layout"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/headline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:hint="@string/details"
            android:background="@color/colorAccent"
            android:textColorHint="@color/white"
            android:paddingStart="8dp"
            android:lines="4" />
    </FrameLayout>

    <TextView
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/note_layout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/yes"/>
    <TextView
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/yes_btn"
        android:layout_below="@id/note_layout"
        android:paddingBottom="16dp"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/no"/>

</RelativeLayout>