<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_color"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".VerificationActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/verify_your_phone_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/title"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/enter_verification_code"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="20dp">
            <EditText
                android:id="@+id/verification_code_edit_text"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:textCursorDrawable="@drawable/cursor" />
        </FrameLayout>





        <Button
            android:id="@+id/verify_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:background="@drawable/buttons_bg"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>



</RelativeLayout>
