<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_color"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/sign_up"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginStart="8dp"
                android:text="@string/user_name"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/user_name"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:textCursorDrawable="@drawable/cursor" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginStart="8dp"
                android:text="@string/password"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:textCursorDrawable="@drawable/cursor" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginStart="8dp"
                android:text="@string/phone"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/phone"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:textCursorDrawable="@drawable/cursor" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginStart="8dp"
                android:text="@string/address"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/address"
                    android:inputType="textPostalAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:textCursorDrawable="@drawable/cursor" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginStart="8dp"
                android:text="@string/birth_date"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <ImageButton
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calender"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:padding="8dp" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@drawable/buttons_bg"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>


        </LinearLayout>



    </RelativeLayout>
</ScrollView>
